--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -1,38 +1,37 @@
-name: Refresh Cloudflare Workers Usage
+name: Update Worker Stats
 
 on:
   schedule:
-    - cron: "*/30 * * * *"   # 每 30 分钟
-  workflow_dispatch:
+    - cron: '0 */6 * * *'  # 每6小时运行一次 (UTC时间)
+  workflow_dispatch:       # 允许手动触发
+
+permissions:
+  contents: write
 
 jobs:
-  refresh:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          python-version: "3.11"
+          node-version: '18'
 
       - name: Install dependencies
-        run: pip install requests
+        run: npm install
 
-      - name: Fetch Workers usage
+      - name: Fetch Data from Cloudflare
+        run: node scripts/fetch-data.js
         env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        run: python scripts/fetch_workers.py
+          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
 
-      - name: Commit and push if changed
-        run: |
-          git diff --quiet || (
-            git config user.name "github-actions"
-            git config user.email "actions@github.com"
-            git add data.json
-            git commit -m "auto: update workers usage"
-            git push
-          )
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          # 这样会把 index.html 和 data.json 都推送到 gh-pages 分支
