--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-
+{
+  "name": "cf-worker-stats",
+  "version": "1.0.0",
+  "description": "Cloudflare Worker Statistics Visualization",
+  "main": "scripts/fetch-data.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.0"
+  }
+}
