--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,10 +1,10 @@
 name: Update Worker Stats
 
-on:
+于:
   schedule:
     # 分钟 小时 日 月 周
     # */20 代表“每隔20分钟”
-    - cron: '*/20 * * * *'
+    - cron: '0 */1 * * *'
   workflow_dispatch:       # 允许手动触发
 
 permissions:
